; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zed/agents/extr_zfs_mod.c_zfs_unavail_pool.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zed/agents/extr_zfs_mod.c_zfs_unavail_pool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@LOG_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"zfs_unavail_pool: examining '%s' (state %d)\00", align 1
@VDEV_STATE_DEGRADED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @zfs_unavail_pool to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfs_unavail_pool(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @LOG_INFO, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @zpool_get_name(i32* %7)
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @zfs_toplevel_state(i32* %9)
  %11 = trunc i64 %10 to i32
  %12 = call i32 @zed_log_msg(i32 %6, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call i64 @zfs_toplevel_state(i32* %13)
  %15 = load i64, i64* @VDEV_STATE_DEGRADED, align 8
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %26

17:                                               ; preds = %2
  %18 = call %struct.TYPE_4__* @malloc(i32 8)
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %5, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  store i32* %19, i32** %21, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = bitcast i8* %22 to i32*
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %25 = call i32 @list_insert_tail(i32* %23, %struct.TYPE_4__* %24)
  br label %29

26:                                               ; preds = %2
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @zpool_close(i32* %27)
  br label %29

29:                                               ; preds = %26, %17
  ret i32 0
}

declare dso_local i32 @zed_log_msg(i32, i8*, i32, i32) #1

declare dso_local i32 @zpool_get_name(i32*) #1

declare dso_local i64 @zfs_toplevel_state(i32*) #1

declare dso_local %struct.TYPE_4__* @malloc(i32) #1

declare dso_local i32 @list_insert_tail(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @zpool_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
